--- a/main/demoPage.html
+++ b/main/demoPage.html
@@ -447,7 +447,7 @@
 		<div class="intro">
 	
 			<h1>이코믹스 오시는 길</h1>
-			<div id="googleMap" style="width: 100%;height: 400px;"></div>
+			<div id="googleMap" style="width: 80%;height: 500px;"></div>
 
 <script>
    function myMap(){
@@ -471,7 +471,7 @@
 
    }
 </script> 
-			<!--script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA17aGZ8qbu36ay3gwqh9sQvpBnI5BwsHg&callback=myMap"></script-->
+			<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA17aGZ8qbu36ay3gwqh9sQvpBnI5BwsHg&callback=myMap"></script>
 			<p>(03920)서울시 마포구 성암로 330 DMC첨단산업센터 A동 512호 
 T. 070-8270-7073 Fax. 02-6280-7071
 E. support@ecomix.co.kr
