--- a/main/mainpage.html
+++ b/main/mainpage.html
@@ -100,7 +100,7 @@
 	<li data-menuanchor="5thpage"><a href="#5thpage">English</a></li>
 </ul-->
 <ul id="menu">
-<img src="D:\가제작\media\www.seoulmediacomics.com\images\logo_brand_big.jpg">
+<img src="imgs/logo_brand_big.jpg">
 	<li data-menuanchor="aboutus1"><a href="#aboutus1">회사<br>소개</a></li>
 	<li data-menuanchor="business1"><a href="#business1">사업<br>소개</a></li>
 	<li data-menuanchor="Author1"><a href="#Author1">작가<br>지원</a></li>
