--- a/main/en.html
+++ b/main/en.html
@@ -49,8 +49,8 @@
 	<![endif]-->
 
 				
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
 	<script src="../multislider.min.js"></script>
 
 	<script type="text/javascript" src="../jquery.fullPage.js"></script>
@@ -100,12 +100,12 @@
 	<li data-menuanchor="5thpage"><a href="#5thpage">English</a></li>
 </ul-->
 <ul id="menu">
-<img src="D:\가제작\media\www.seoulmediacomics.com\images\logo_brand_big.jpg">
+<img src="imgs/logo_brand_big.jpg">
 	<li data-menuanchor="aboutus1"><a href="#aboutus1">회사<br>소개</a></li>
 	<li data-menuanchor="business1"><a href="#business1">사업<br>소개</a></li>
 	<li data-menuanchor="Author1"><a href="#Author1">작가<br>지원</a></li>
 	<li data-menuanchor="contectus1"><a href="#contectus1">오시<br>는길</a></li>
-	<li data-menuanchor="5thpage"><a href="/en">English</a></li>
+	<li data-menuanchor="5thpage"><a href="./en">English</a></li>
 </ul>
 
 					
@@ -225,7 +225,7 @@
 			<h1>기획 작품 제작</h1>
 			<p>원작+각색+연출+노하우+네트워크체계적인 프로듀싱을 통해 글로벌 시장을 겨냥한 최고의 작품을 제작합니다</p>
 		</div>
-		<div id="Slider1" class="exampleSlider">
+		<div style="margin-left:15%; width:1200px;"  id="Slider1" class="exampleSlider">
        <div class="MS-content">
            <div class="item">
                <p>Item<br>1</p>
@@ -270,7 +270,7 @@
 			<p>
 			최고의 만화가들이 이코믹스와 함께 해 왔습니다. </p>
 		</div>
-<div id="Slider2" class="exampleSlider">
+<div style="margin-left:15%; width:1200px;"  id="Slider2" class="exampleSlider">
        <div class="MS-content">
            <div class="item">
                <p>Item<br>1</p>
@@ -313,14 +313,14 @@
 		<div class="intro">
 			<h1>자체 로컬라이징</h1>
 			<p>100명의 전문 번역자, 검수자, 편집자들이 9개 언어로 직접 현지화 하여 작품이 원활하게 해외에 진출할 수 있도록 전문적으로 지원합니다.</p>
-			<img src="imgs/about_img4.jpg" alt="example" />
+			<img style="margin-left:15%; width:1200px;"  src="imgs/about_img4.jpg" alt="example" />
           </div>
         </div>
 		<div class="section" id="section2">
 		<div class="intro">
 			<h1>해외 플랫폼 직접 유통</h1>
 			<p>북미, 중국, 일본, 유럽, 동아시아의 대다수 중대형 플랫폼에 독점/비독점 유통을 활발하게 진행하고 있습니다.</p>
-			<img style="width:980px; height:auto;" src="imgs/continent.png" alt="example" />
+			<img  style="margin-left:15%; width:1200px;"  style="width:980px; height:auto;" src="imgs/continent.png" alt="example" />
 		</div>
 	</div>
 		<div class="section" id="section2">
@@ -407,7 +407,7 @@
 	</div>
 	<div class="section" id="section2">
 		<div class="intro">
-			<h1 style="margin-top: 10%;">작품 제안 / 작가 지원</h1>
+			<h1 style="margin-top: 0%;">작품 제안 / 작가 지원</h1>
 
 		<div class="wrapper">
 		  <div class="hex">
@@ -447,7 +447,7 @@
 		<div class="intro">
 	
 			<h1>이코믹스 오시는 길</h1>
-			<div id="googleMap" style="width: 80%;height: 500px;"></div>
+			<div id="googleMap" style=" margin-left:15%; width: 80%;height: 500px;"></div>
 
 <script>
    function myMap(){
@@ -471,7 +471,7 @@
 
    }
 </script> 
-			<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA17aGZ8qbu36ay3gwqh9sQvpBnI5BwsHg&callback=myMap"></script>
+		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA17aGZ8qbu36ay3gwqh9sQvpBnI5BwsHg&callback=myMap"></script>
 			<p>(03920)서울시 마포구 성암로 330 DMC첨단산업센터 A동 512호 
 T. 070-8270-7073 Fax. 02-6280-7071
 E. support@ecomix.co.kr
