--- a/main/mainpage.html
+++ b/main/mainpage.html
@@ -9,7 +9,10 @@
 	<meta name="keywords"  content="fullpage,jquery,alvaro,trigo,plugin,fullscren,screen,full,iphone5,apple" />
 	<meta name="Resource-type" content="Document" />
 
-
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"
+  />
 	<link rel="stylesheet" type="text/css" href="../jquery.fullPage.css" />
 	<link rel="stylesheet" type="text/css" href="examples.css" />
     
@@ -25,9 +28,7 @@
 			margin: 0 0 0 0px;
 		}
 		#section3 img{
-			bottom: 0px;
-			position: absolute;
-			margin-left: -420px;
+            margin: 0 0 0 0px;
 		}
 		.intro p{
 			width: 50%;
@@ -170,51 +171,46 @@
 	<br><br>
  <div>
      <h2>2021</h2>
-	    <li>NETCOMICS launches its German, French, Spanish, Indonesian, Vietnamese, and Thai language services</li>
+	    <li>넷코믹스 플랫폼 다국어 서비스 개시. ( 독일어, 프랑스어, 스페인어, 인도네시아어, 베트남어, 태국어) </li>
    </div>
  <div>
      <h2>2020</h2>
-	   <li>NETCOMICS starts distributing comics translated into German, French, and Vietnamese</li>
-	   <li>NETCOMICS launches its Japanese and Chinese language services</li>
+	   <li>독일어 프랑스어 베트남어 만화 번역 유통 시작</li>
    </div>
  <div>
      <h2>2019</h2>
-	   <li>NETCOMICS starts distributing comics translated into Spanish</li>
+	   <li>스페인어 만화 번역 유통 시작    </li>
    </div>
    <div>
      <h2>2018</h2>
-       <li>NETCOMICS starts distributing comics translated into Indonesian, Thai, and Taiwanese</li>
+       <li>인도네시아어 태국어 대만어 만화 번역 유통 시작   </li>
    </div>
    <div>
      <h2>2017</h2>
-       <li>NETCOMICS starts distributing comics translated into Chinese</li>
-       <li>NETCOMICS launches its mobile application</li>
+       <li>넷코믹스 모바일앱 출시 </li>
+       <li>중국어 만화 번역 유통 시작</li>
    </div>
       <div>
      <h2>2015</h2>
-       <li>NETCOMICS starts distributing comics translated into Japanese</li>
+       <li>일본어 만화 번역 유통 시작    </li>
    </div>
      <div>
      <h2>2007</h2>
-       <li>NETCOMICS launces overseas licensing of Korean Comics Publishing Rights (France, Germany, Italy, Spain, Belgium, Indonesia, etc.)</li>
+       <li>한국만화 출판권 해외 라이센싱 개시(프랑스, 독일, 이탈리아, 스페인, 벨기에, 인도네시아 등)    </li>
    </div>
    <div>
      <h2>2006</h2>
-       <li>NETCOMICS launches</li>
-       <li>ECOMICS launches online and offline comics publishing business</li>
+       <li>넷코믹스 영문 플랫폼 서비스 개시 – www.NETCOMICS.com</li>
+       <li>미국 온-오프라인 만화출판 사업 개시</li>
    </div>
   <div>
      <h2>2005</h2>
-       <li>NETCOMICS establishes its U.S. branch</li>
-	   <li>ECOMICS publishes English translated Korean comics</li>
-   </div>
-   <div>
-     <h2>2004</h2>
-     <li>ECOMICS launches its online service for Japanese BL and TL comics</li>
+       <li>미국 NETCOMICS 설립</li>
+	   <li>영문판 만화 출판</li>
    </div>
    <div>
      <h2>1998</h2>
-     <li>Develops ECOMICS (ecomix.co.kr), the Internet comics platform</li>
+     <li>한국 인터넷 만화 플랫폼 이코믹스(ecomix.co.kr) 서비스 개발</li>
    </div>
 </div>
 </div>
@@ -225,37 +221,47 @@
 			<h1>기획 작품 제작</h1>
 			<p>원작+각색+연출+노하우+네트워크체계적인 프로듀싱을 통해 글로벌 시장을 겨냥한 최고의 작품을 제작합니다</p>
 		</div>
-		<div id="Slider1" class="exampleSlider">
+		<div style="margin-left:15%; width:1200px;"  id="Slider1" class="exampleSlider">
        <div class="MS-content">
            <div class="item">
-               <p>Item<br>1</p>
+            <a href="https://comic.naver.com/webtoon/list?titleId=749639" target="_blank"><img class="img_thumbnail" src="imgs/thum/2301091jfg1.jpg">
+               <p>남주의 첫날밤을 가져버렸다</p></a>
            </div>
            <div class="item">
-               <p>Item<br>2</p>
+            <a href="https://www.netcomics.com/ko/comic/15939" target="_blank"><img class="img_thumbnail" src="imgs/thum/maidd950X537.jpg">
+               <p>하녀와 흡혈귀</p></a>
            </div>
            <div class="item">
-               <p>Item<br>3</p>
+            <a href="https://www.netcomics.com/ko/comic/17360" target="_blank"><img class="img_thumbnail" src="imgs/thum/t17360_m_cover_1624325588.jpg">
+               <p>스텔라를 위하여</p></a>
            </div>
            <div class="item">
-               <p>Item<br>4</p>
+            <a href="https://www.netcomics.com/ko/comic/17284" target="_blank"><img class="img_thumbnail" src="imgs/thum/keystone950X537.jpg">
+               <p>키스톤 로맨틱 콤비</p></a>
            </div>
            <div class="item">
-               <p>Item<br>5</p>
+            <a href="https://www.netcomics.com/ko/comic/17279" target="_blank"><img class="img_thumbnail" src="imgs/thum/emperorslapnew950x537.jpg">
+               <p>폐하의 무릎 위</p>
            </div>
            <div class="item">
-               <p>Item<br>6</p>
+            <a href="https://www.netcomics.com/ko/comic/17323" target="_blank"><img class="img_thumbnail" src="imgs/thum/bc6b93f6974648c997d404d0e3753fb6.jpg">
+               <p>파멸 예정 연하 남주가 내게 빠졌다</p></a>
            </div>
            <div class="item">
-               <p>Item<br>7</p>
+            <a href="https://www.netcomics.com/ko/comic/17369" target="_blank"><img class="img_thumbnail" src="imgs/thum/t17369_m_cover_1628573414.jpg">
+               <p>악녀는 백치가면을 쓴다</p></a>
            </div>
            <div class="item">
-               <p>Item<br>8</p>
+            <a href="https://www.netcomics.com/ko/comic/17318" target="_blank"><img class="img_thumbnail" src="imgs/thum/37a63015ce0d48e28f69215040e72ce7.jpg">
+               <p>그대 마음 한 스푼</p></a>
            </div>
            <div class="item">
-               <p>Item<br>9</p>
+            <a href="https://www.netcomics.com/ko/comic/17587" target="_blank"><img class="img_thumbnail" src="imgs/thum/t17587_s_cover_1640241113.jpg">
+               <p>마이 페어 메이드</p></a>
            </div>
            <div class="item">
-               <p>Item<br>10</p>
+            <a href="https://www.netcomics.com/ko/comic/17645" target="_blank"><img class="img_thumbnail" src="imgs/thum/t17645_s_cover_1650864097.jpg">
+               <p>얼음램프 - 기라 연대기</p></a>
            </div>
        </div>
        <div class="MS-controls">
@@ -270,37 +276,47 @@
 			<p>
 			최고의 만화가들이 이코믹스와 함께 해 왔습니다. </p>
 		</div>
-<div id="Slider2" class="exampleSlider">
+<div style="margin-left:15%; width:1200px;"  id="Slider2" class="exampleSlider">
        <div class="MS-content">
            <div class="item">
-               <p>Item<br>1</p>
+            <a href="https://www.netcomics.com/ko/comic/17645" target="_blank"><img class="img_thumbnail" src="imgs/thum/950X537.jpg">
+               <p>나비 호랑이를 물다</p></a>
            </div>
            <div class="item">
-               <p>Item<br>2</p>
+            <a href="https://www.netcomics.com/ko/comic/17645" target="_blank"><img class="img_thumbnail" src="imgs/thum/survivalmarriage950x537.jpg">
+               <p>생존 결혼</p></a>
            </div>
            <div class="item">
-               <p>Item<br>3</p>
+            <a href="https://www.netcomics.com/ko/comic/17645" target="_blank"><img class="img_thumbnail" src="imgs/thum/58688_big.jpg">
+               <p>바람의 나라</p></a>
            </div>
            <div class="item">
-               <p>Item<br>4</p>
+            <a href="https://www.netcomics.com/ko/comic/17645" target="_blank"><img class="img_thumbnail" src="imgs/thum/mid_night_950x537.jpg">
+               <p>미드나잇 파트너</p></a>
            </div>
            <div class="item">
-               <p>Item<br>5</p>
+            <a href="https://www.netcomics.com/ko/comic/17645" target="_blank"><img class="img_thumbnail" src="imgs/thum/t17460_m_cover_1632985115.jpg">
+               <p>짙은</p></a>
            </div>
            <div class="item">
-               <p>Item<br>6</p>
+            <a href="https://www.netcomics.com/ko/comic/17645" target="_blank"><img class="img_thumbnail" src="imgs/thum/dc950x537.jpg">
+               <p>도깨비 카페</p></a>
            </div>
            <div class="item">
-               <p>Item<br>7</p>
+            <a href="https://www.netcomics.com/ko/comic/17645" target="_blank"><img class="img_thumbnail" src="imgs/thum/t17367_m_cover_1627285854.jpg">
+               <p>사랑이 아니다</p></a>
            </div>
            <div class="item">
-               <p>Item<br>8</p>
+            <a href="https://www.netcomics.com/ko/comic/17645" target="_blank"><img class="img_thumbnail" src="imgs/thum/t177_s_cover_1645675794.jpg">
+               <p>감금 창고</p></a>
            </div>
            <div class="item">
-               <p>Item<br>9</p>
+            <a href="https://www.netcomics.com/ko/comic/17645" target="_blank"><img class="img_thumbnail" src="imgs/thum/unfulfilleddreams950x537.jpg">
+               <p>기사의 꿈은 이루어지지 않는다</p></a>
            </div>
            <div class="item">
-               <p>Item<br>10</p>
+            <a href="https://www.netcomics.com/ko/comic/17645" target="_blank"><img class="img_thumbnail" src="imgs/thum/prince_bari_950x537.jpg">
+               <p>바리 왕자</p></a>
            </div>
        </div>
        <div class="MS-controls">
@@ -313,14 +329,14 @@
 		<div class="intro">
 			<h1>자체 로컬라이징</h1>
 			<p>100명의 전문 번역자, 검수자, 편집자들이 9개 언어로 직접 현지화 하여 작품이 원활하게 해외에 진출할 수 있도록 전문적으로 지원합니다.</p>
-			<img src="imgs/about_img4.jpg" alt="example" />
+			<img style="margin-left:15%; width:1200px;"  src="imgs/about_img4.jpg" alt="example" />
           </div>
         </div>
 		<div class="section" id="section2">
 		<div class="intro">
 			<h1>해외 플랫폼 직접 유통</h1>
 			<p>북미, 중국, 일본, 유럽, 동아시아의 대다수 중대형 플랫폼에 독점/비독점 유통을 활발하게 진행하고 있습니다.</p>
-			<img style="width:980px; height:auto;" src="imgs/continent.png" alt="example" />
+			<img  style="margin-left:15%; width:1200px;"  style="width:980px; height:auto;" src="imgs/continent.png" alt="example" />
 		</div>
 	</div>
 		<div class="section" id="section2">
@@ -407,7 +423,7 @@
 	</div>
 	<div class="section" id="section2">
 		<div class="intro">
-			<h1 style="margin-top: 10%;">작품 제안 / 작가 지원</h1>
+			<h1 style="margin-top: 0%;">작품 제안 / 작가 지원</h1>
 
 		<div class="wrapper">
 		  <div class="hex">
@@ -447,7 +463,7 @@
 		<div class="intro">
 	
 			<h1>이코믹스 오시는 길</h1>
-			<div id="googleMap" style="width: 80%;height: 500px;"></div>
+			<div id="googleMap" style=" margin-left:15%; width: 80%;height: 500px;"></div>
 
 <script>
    function myMap(){
@@ -471,7 +487,7 @@
 
    }
 </script> 
-			<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA17aGZ8qbu36ay3gwqh9sQvpBnI5BwsHg&callback=myMap"></script>
+		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA17aGZ8qbu36ay3gwqh9sQvpBnI5BwsHg&callback=myMap"></script>
 			<p>(03920)서울시 마포구 성암로 330 DMC첨단산업센터 A동 512호 
 T. 070-8270-7073 Fax. 02-6280-7071
 E. support@ecomix.co.kr
@@ -485,27 +501,27 @@ E. support@ecomix.co.kr
 <script>
 $('#Slider1').multislider({
     slideAll:true,
-    duration: 1000,
+    duration: 5000,
     interval:4000,
-	continuous:true
+	//continuous:true
 });
 $('#Slider2').multislider({
     slideAll:true,
-    duration: 1000,
+    duration: 5000,
     interval:4000,
-	continuous:true
+	//continuous:true
 });
 $('#Slider3').multislider({
     slideAll:true,
-    duration: 1000,
+    duration: 5000,
     interval:4000,
-	continuous:true
+	//continuous:true
 });
 $('#Slider4').multislider({
     slideAll:true,
-    duration: 1000,
+    duration: 5000,
     interval:4000,
-	continuous:true
+	//continuous:true
 });
 
 $('#Slider1').multislider('continuous');
